Add dashboard API resource
